--- a/editor.html
+++ b/editor.html
@@ -16,6 +16,8 @@
               <div class="panel-header"><div class="menu-title">Project</div><button type="button" class="panel-close-btn" id="menu-file-close-btn" aria-label="Close File menu">×</button></div>
               <button id="project-save-btn" class="menu-link-btn" type="button">Save</button>
               <button id="project-load-btn" class="menu-link-btn" type="button">Load</button>
+              <button id="project-save-local-btn" class="menu-link-btn" type="button">Save Local</button>
+              <button id="project-load-local-btn" class="menu-link-btn" type="button">Load Local</button>
               <button id="project-reset-btn" class="menu-link-btn" type="button">Reset</button>
               <input id="project-load-input" type="file" accept=".json,application/json" class="visually-hidden" />
             </div>
