--- a/editor.html
+++ b/editor.html
@@ -75,7 +75,6 @@
         <aside class="sidebar" aria-label="Editor controls">
           <section class="side-section" aria-label="Drawing tools">
             <h2 class="section-title">Tool Grid</h2>
-            <button class="tool-button" id="tool-help-btn" type="button" aria-label="Open tool shortcut help">Tool Help</button>
             <div class="tool-grid">
               <button class="tool-button tool-tile" data-tool="select" type="button">Select</button>
               <button class="tool-button tool-tile" data-tool="iso-line" type="button">Line</button>
@@ -140,13 +139,9 @@
 
     <div id="selection-bar" class="selection-bar" hidden>
       <div id="selection-bar-count" class="selection-bar-count">Selection (0)</div>
-      <label class="selection-bar-keep"><input id="selection-keep-checkbox" type="checkbox" /> Keep selecting</label>
-      <label class="selection-bar-keep"><input id="selection-include-faces-checkbox" type="checkbox" /> Include enclosed faces</label>
-      <div class="selection-bar-actions">
-        <button id="selection-done-btn" class="menu-link-btn" type="button">Done</button>
+            <div class="selection-bar-actions">
         <button id="selection-delete-btn" class="menu-link-btn" type="button">Delete</button>
-        <button id="duplicate-selection-btn" class="menu-link-btn" type="button">Duplicate</button>
-        <button id="btnGroup" class="menu-link-btn" type="button">Group</button>
+        <button id="btnGroup" class="menu-link-btn" type="button" hidden>Group</button>
       </div>
     </div>
 
