--- a/editor.html
+++ b/editor.html
@@ -139,7 +139,28 @@
 
     <div id="selection-bar" class="selection-bar" hidden>
       <div id="selection-bar-count" class="selection-bar-count">Selection (0)</div>
-            <div class="selection-bar-actions">
+      <div class="selection-style-controls">
+        <label class="selection-style-field" for="selection-line-color">
+          <span>Color</span>
+          <input id="selection-line-color" type="color" value="#4aa3ff" aria-label="Selected color" />
+        </label>
+        <label class="selection-style-field" for="selection-stroke-width">
+          <span>Stroke</span>
+          <select id="selection-stroke-width" class="style-select" aria-label="Selected stroke width">
+            <option value="1">1</option>
+            <option value="2" selected>2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+          </select>
+        </label>
+      </div>
+      <div class="selection-bar-actions">
         <button id="selection-delete-btn" class="menu-link-btn" type="button">Delete</button>
         <button id="btnGroup" class="menu-link-btn" type="button" hidden>Group</button>
       </div>
