--- a/editor.html
+++ b/editor.html
@@ -161,6 +161,7 @@
         </label>
       </div>
       <div class="selection-bar-actions">
+        <button id="selection-apply-btn" class="menu-link-btn" type="button">Apply</button>
         <button id="selection-delete-btn" class="menu-link-btn" type="button">Delete</button>
         <button id="btnGroup" class="menu-link-btn" type="button" hidden>Group</button>
       </div>
